# mod_amqp

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  amqp.conf.xml  mod_amqp.c  mod_amqp.h  mod_amqp_cdr.c  mod_amqp_cdr_utils.c  mod_amqp_cdr_utils.h  mod_amqp_connection.c  mod_amqp_logging.c  mod_amqp_producer.c  mod_amqp_utils.c
.github/workflows/: development.yml  release.yml
